src/main/openshift/library-shop.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: library-shop
    group: rhacademy
  name: library-shop
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: library-shop
    group: rhacademy
  sessionAffinity: None
  type: ClusterIP
