src/main/openshift/library-shop.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: library-shop
    group: rhacademy
  name: library-shop
spec:
  host: ''
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: library-shop
    weight: 100
  wildcardPolicy: None
